--- a/cssnext/cssnext.html
+++ b/cssnext/cssnext.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="dest/cssnext.css">
 </head>
 <body>
-    
+    <a href="">hahah</a>
+    <button>button</button>
 </body>
 </html>
