--- a/echarts/index.html
+++ b/echarts/index.html
@@ -73,6 +73,7 @@
             var myChart = echarts.init(document.getElementById('chart'));
             myChart.showLoading();
             setTimeout(function() {
+                console.log(123)
                 myChart.hideLoading();
                 var names = [];
                 var loginCounts = [];
