--- a/eventproxy/index.html
+++ b/eventproxy/index.html
@@ -19,6 +19,7 @@
         <li>2222</li>
         <li>2222</li>
     </ul>
+    <a href="blob:https://v.vzuu.com/40c1fdf3-0585-4792-9926-74222b4475d0">video</a>
     <script>
         document.getElementsByTagName("ul")[0].addEventListener("click",function(e){
             console.log(this)
