--- a/css/table/cell.html
+++ b/css/table/cell.html
@@ -7,6 +7,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <style>
+        .parent {
+            width: 500px;
+            height: 400px;
+        }
+
         .middle {
             display: table-cell;
             height: 100px;
@@ -14,27 +19,30 @@
             text-align: center;
             vertical-align: middle;
         }
-        .diff{
+
+        .diff {
             display: inline;
         }
     </style>
 </head>
 
 <body>
-    <div class="middle">
-        123
+    <div class="middle" align='center'>
+        <div style="width:30px">
+                123
+        </div>
     </div>
     <div class="two_cols">
         <img src="../../mm.jpg" alt="" style="display:inline">
         <div>
-                都是发生大发送到发送到
-                都是发生大发送到发送到
-                都是发生大发送到发送到
-                都是发生大发送到发送到
-                都是发生大发送到发送到
-                都是发生大发送到发送到
-                都是发生大发送到发送到
-                都是发生大发送到发送到
+            都是发生大发送到发送到
+            都是发生大发送到发送到
+            都是发生大发送到发送到
+            都是发生大发送到发送到
+            都是发生大发送到发送到
+            都是发生大发送到发送到
+            都是发生大发送到发送到
+            都是发生大发送到发送到
         </div>
     </div>
     <div class="diff">
